[package]
name = "containerize"
version = "0.3.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apply = "0.3.0"

[dependencies.bi_result]
git = "git://github.com/T0mstone/tlibs"